Fixed styling and spacing problems

--- a/jaylyn_dev/styles.css
+++ b/jaylyn_dev/styles.css
@@ -5,6 +5,7 @@
   --color-blue: #008cff;
   --color-orange: #d09100;
   --hover: hsl(205, 56%, 22%);
+  --selected: hsl(200, 100%, 70%);
 }
 
 html {
@@ -12,24 +13,60 @@ html {
   background-color: #0d1117;
   color: white;
   display: flex;
-  font-size: larger;
+  font-size: 19px;
+  overflow: hidden;
 }
 
-header {
-  border: 1px solid white;
-  padding: 0.5rem;
-  max-width: 400px;
+body {
+  margin: 0;
+  padding: 1rem;
+  min-height: 100vh;
+  width: 100%;
+}
 
+.main-container {
+  display: flex;
+  gap: 1rem;
+  width: 100%;
+  height: 95vh;
+}
+
+.left-content {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+}
+
+#display {
+  border: 1px solid;
+  margin-top: 22px;
+  flex: 1;
+}
+
+.home-container {
+  div {
+    border: 1px solid;
+    padding: 0.5rem;
+  }
   span {
     color: var(--color-green);
   }
 }
 
-#projects-container {
-  border: 1px solid;
+.proj-container {
+  height: 30%;
+  margin-top: 0.2rem;
   display: flex;
-  height: 300px;
-
+  flex-direction: column;
+  div {
+    border: 1px solid;
+    display: flex;
+    height: 100%;
+  }
+  p {
+    margin: 0;
+    padding-top: 0.3rem;
+  }
   ul {
     padding: 0.5rem 0;
     margin: 0;
@@ -44,11 +81,20 @@ header {
   }
 }
 
-#skills-container {
-  border: 1px solid;
+.skills-container {
+  margin-top: 0.2rem;
+  height: 30%;
   display: flex;
-  max-height: 300px;
-  overflow: auto;
+  flex-direction: column;
+  div {
+    border: 1px solid;
+    height: 100%;
+    overflow: auto;
+  }
+  p {
+    margin: 0;
+    padding-top: 0.3rem;
+  }
   ul {
     list-style-type: none;
     margin: 0;
@@ -62,9 +108,40 @@ header {
     }
   }
 }
-#display {
-  border: 1px solid;
-  width: 500px;
-  height: 500px;
-  max-height: 500px;
+.exp-container {
+  height: 30%;
+  margin-top: 0.2rem;
+  display: flex;
+  flex-direction: column;
+  div {
+    border: 1px solid;
+    height: 100%;
+  }
+  p {
+    margin: 0;
+    padding-top: 0.3rem;
+  }
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0.5rem 0;
+    width: 100%;
+    li {
+      padding-left: 12px;
+    }
+    :hover {
+      background-color: var(--hover);
+    }
+  }
+}
+#home {
+  margin: 0;
+}
+.selected {
+  div {
+    border-color: var(--selected);
+  }
+  p {
+    color: var(--selected);
+  }
 }
